[project]
name = "ansible-role-libvirtd"
version = "0.0.0"
description = "Ansible role for installing libvirt-daemon and tools."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["libvirt", "libvirtd", "kvm", "qemu", "virtualization"]
repository = "https://github.com/jam82/ansible-role-libvirtd"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
